--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "dependencies": {},
   "devDependencies": {
+    "serverless-pseudo-parameters": "^2.5.0",
     "serverless-step-functions": "^2.30.0"
   }
 }
